# rustpython_example

./: Dockerfile_build  Dockerfile_run  ReadMe.md  build.sh  execution.sh  setup.sh
from_pip_no_ctypes/: Cargo.toml  ReadMe.md  install.sh
from_pip_no_ctypes/src/: main.rs  some_module.py
from_pip_with_setuptools/: Cargo.toml  ReadMe.md  install.sh
from_pip_with_setuptools/src/: main.rs  some_module.py
hello_world/: ReadMe.md
python_script/: Cargo.toml  ReadMe.md
python_script/src/: main.rs  main_module.py
rustpython_example_hello_embed/: Cargo.toml  ReadMe.md
rustpython_example_hello_embed/src/: main.rs
rustpython_example_package_embed/: Cargo.toml  ReadMe.md
rustpython_example_package_embed/src/: main.rs  package_embed.py
